k8s/property-management-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Program Files (x86)\Kompose\kompose.exe convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: property-management
  name: property-management
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: property-management
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Program Files (x86)\Kompose\kompose.exe convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: property-management
    spec:
      containers:
        - env:
            - name: CORS_ORIGIN
              value: localhost
            - name: FIREBASE_CLIENT_EMAIL
              valueFrom:
                configMapKeyRef:
                  key: FIREBASE_CLIENT_EMAIL
                  name: property-management-env
            - name: FIREBASE_OVERWRITE_CREDENTIALS
              valueFrom:
                configMapKeyRef:
                  key: FIREBASE_OVERWRITE_CREDENTIALS
                  name: property-management-env
            - name: FIREBASE_PRIVATE_KEY
              valueFrom:
                configMapKeyRef:
                  key: FIREBASE_PRIVATE_KEY
                  name: property-management-env
            - name: FIREBASE_STORAGE_EMULATOR_HOST
            - name: FIREBASE_TOKEN
              valueFrom:
                configMapKeyRef:
                  key: FIREBASE_TOKEN
                  name: property-management-env
            - name: FIRESTORE_EMULATOR_HOST
            - name: PORT
              value: "8080"
          image: cloud-porsche-management
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - wget
                - -qO-
                - http://localhost:8080/v1/
          name: property-management
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
