k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Program Files (x86)\Kompose\kompose.exe convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: ui
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ui
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Program Files (x86)\Kompose\kompose.exe convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: ui
    spec:
      containers:
        - image: cloud-porsche-ui
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:80
          name: ui
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
