k8s/property-management-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Program Files (x86)\Kompose\kompose.exe convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: property-management
  name: property-management
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  type: LoadBalancer
  selector:
    io.kompose.service: property-management
