k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Program Files (x86)\Kompose\kompose.exe convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: ui
  name: ui
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  type: LoadBalancer
  selector:
    io.kompose.service: ui
