k8s/cloud-porsche-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-porsche-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /property-management(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: property-management
                port:
                  number: 8080
